# git-hell

./: README.md  git-hell.cabal  stack.yaml
app/: HookMain.hs  Main.hs
src/: FetchDaemon.hs  GitHellLib.hs
