name:                git-hell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/apauley/git-hell#readme
license:             BSD3
license-file:        LICENSE
author:              Andreas Pauley
maintainer:          andreas@pauley.org.za
copyright:           BSD3
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GitHellLib
                     , FetchDaemon
  build-depends:       base >= 4.7 && < 5
                     , turtle >= 1.2.8
                     , foldl >= 1.2.1
                     , text
                     , hsh
  default-language:    Haskell2010

executable git-hell
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  if !os(osx)
    ghc-options:       -static -optc-static -optl-static

  build-depends:       base
                     , turtle >= 1.2.8
                     , git-hell
                     , hsh
  default-language:    Haskell2010

executable git-hell-hooks
  hs-source-dirs:      app
  main-is:             HookMain.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  if !os(osx)
    ghc-options:       -static -optc-static -optl-static

  build-depends:       base
                     , turtle >= 1.2.8
                     , text
                     , git-hell
                     , hsh
  default-language:    Haskell2010

test-suite git-hell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , git-hell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/apauley/git-hell
